--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -1,3 +1,4 @@
+container .grade_range {float:left;}
 /* -----------------------------------------------------------------------
  Blueprint CSS Framework 0.8
  http://blueprintcss.org
@@ -238,7 +239,7 @@ input.text, input.title, textarea, select {margin:0.5em 0;border:1px solid #bbb;
 input.text:focus, input.title:focus, textarea:focus, select:focus {border:1px solid #666;}
 input.text, input.title {width:300px;padding:5px;}
 input.title {font-size:1.5em;}
-textarea {width:390px;height:250px;padding:5px;}
+textarea {padding:5px;}
 .error, .notice, .success {padding:.8em;margin-bottom:1em;border:2px solid #ddd;}
 .error {background:#FBE3E4;color:#8a1f11;border-color:#FBC2C4;}
 .notice {background:#FFF6BF;color:#514721;border-color:#FFD324;}
