Added grading skills settings.

--- a/app/views/settings/_settings_list.erb
+++ b/app/views/settings/_settings_list.erb
@@ -3,7 +3,8 @@
 		{:name => 'Campus Info', :url => '/settings/sites'},
 		{:name => 'Import Data', :url => '/settings/imports'},
 		{:name => 'Grading Periods', :url => '/settings/terms'},
-		{:name => 'Grading Scales', :url => '/settings/grading_scales'}]#,
+		{:name => 'Grading Scales', :url => '/settings/grading_scales'},
+		{:name => 'Grading Skills', :url => '/settings/grading_skills'}]#,
 #		{:name => 'School Calendar', :url => '/settings/events'}]
 %>
 		
