--- a/app/views/settings/assignment_categories/edit.html.erb
+++ b/app/views/settings/assignment_categories/edit.html.erb
@@ -5,14 +5,17 @@
 <%= error_messages_for :type, :header_message => "Please Try Again!", :message => "We had some problems saving your changes:" %>
 
 <div class='box span-13'>
-<% form_for @type do |f| %>
-	<label><span class='required'>Assignment Type</span>
-		<%= f.text_field :name %>
-	</label>
+  <% form_for @type do |f| %>
+    <fieldset>
+      <legend>Assignment Type</legend>
+      
+      <%= f.label :name, {}, :class => 'req' %>
+		  <%= f.text_field :name %>
 			
-	<div class="spacer">
-		<%= submit_tag 'Save', :class => 'btn positive' %>
-		<%= link_to 'Cancel', assignment_categories_path(), :class => 'btn standard' %>
-	</div>
-<% end %>
+	    <div class="spacer">
+		    <%= submit_tag 'Save', :class => 'btn positive' %>
+		    <%= link_to 'Cancel', assignment_categories_path(), :class => 'btn standard' %>
+	    </div>
+    </fieldset>
+  <% end %>
 </div>
