Added a StaticData class to handle data that doesn't change much but is used in multiple places.

--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -8,10 +8,10 @@
 	
 <% end %>
 
-<h2>Welcome to <%= SITE_NAME %>!</h2>
+<h2>Welcome to <%= StaticData.site_name %>!</h2>
 
 <div class='warning box last' style='padding: 5px;'>
-This is a pre-Beta version of the <%= SITE_NAME %> software.  All of the data here is
+This is a pre-Beta version of the <%= StaticData.site_name %> software.  All of the data here is
 generated and most of it is nonsensical.  However, it is a starting point and 
 should give you enough 'things' to be able to exercise the program a little bit.
 Please, take a look around and push all the buttons.  You can't hurt anything here.
