--- a/app/views/settings/index.html.erb
+++ b/app/views/settings/index.html.erb
@@ -4,10 +4,10 @@
 
 <h2>My Settings</h2>
 
-<p>This screen allows you to customize <%= SITE_NAME %> for your own needs.  You can
+<p>This screen allows you to customize <%= StaticData.site_name %> for your own needs.  You can
 change sorting options, display colors, etc.</p>
 
-<p>Administrators use this screen to configure <%= SITE_NAME %> for the whole school.
+<p>Administrators use this screen to configure <%= StaticData.site_name %> for the whole school.
 Configuring the school year, building grading scales, and changing the site name
 are some of the things you can do from this screen.</p>
 
