--- a/public/stylesheets/local.css
+++ b/public/stylesheets/local.css
@@ -11,6 +11,9 @@ body {background: #FFF url("/images/header-bg.gif") top left repeat-x;}
   -moz-border-radius-bottomright: 7px;
   -webkit-border-bottom-left-radius: 7px;
   -webkit-border-bottom-right-radius: 7px;
+	-webkit-box-shadow: 2px 2px 6px rgba(0,0,0,0.6);
+	border-bottom-right-radius: 7px;
+	border-bottom-left-radius: 7px;
   background-color:#EFF7FF;
   padding:4px;
   text-align: center;
