--- a/app/views/gradations/show.html.erb
+++ b/app/views/gradations/show.html.erb
@@ -50,7 +50,7 @@ ul.subsection_tabs li.source_code {
 <!-- example 1 -->  
 <ul id="tabs_example_one" class="subsection_tabs">  
   <li class="tab"><a href="#assignments">Assignments</a></li>  
-  <li class="tab"><a href="#skills">Skills</a></li>  
+  <li class="tab"><a href="#skills">Supporting Skills</a></li>  
   <li class="tab"><a href="#comments">Comments</a></li>  
 </ul>
 
