--- a/app/views/settings/grading_scales/index.html.erb
+++ b/app/views/settings/grading_scales/index.html.erb
@@ -4,13 +4,17 @@
 
 <%= error_messages_for :scale, :header_message => "Please Try Again!", :message => "We had some problems saving your changes:" %>
 
-<table>
+<table class='master'>
 	<thead>
 		<th>Name</th>
 		<th width='1'></th>		
 	</thead>
 	<tbody>
-		<tr><td colspan='0'><%= link_to "Add Scale", new_grading_scale_path, :class => 'btn positive' %></td></tr>
+		<tr class="<%= cycle('odd', 'even')%>">
+		  <td colspan='10'>
+		    <%= link_to "Add Scale", new_grading_scale_path, :class => 'btn positive' %>
+		  </td>
+		</tr>
 		<% for scale in @scales %>
 			<tr class="<%= cycle('odd', 'even')%>" onclick="location.href='<%#= url_for(scale) + '/edit' %>'">
 				<td><%= link_to scale.name, edit_grading_scale_path(scale) %></td>
